Bug 1724617 - Use WebRender for menu popups. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D127374